k8s/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-foobar
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-service # 해당 service 지정 services.yaml의 meta.name 과 일치해야 함
            port:
              number: 5000 # 서비스 port와 일치해야 함
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-service # 해당 service 지정. services.yaml의 meta.name 과 일치해야 함
            port:
              number: 5000 # 서비스 port와 일치해야 함
